[gd_scene load_steps=2 format=3 uid="uid://ch4y1xi67b8ik"]

[ext_resource type="Script" uid="uid://pnkwn8brla74" path="res://scenes/win_screen.gd" id="1_ulig0"]

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ulig0")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="WinnerLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayAgainButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Play Again?"

[node name="MainMenuButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu
"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"
